refcatored login js

--- a/login/login.html
+++ b/login/login.html
@@ -42,6 +42,7 @@
         </div>
         <div class="register-modal" id="register-modal">
                     <form class="register-form" id="register" method="POST" action="javascript:register()">
+                        <span id="modal-close" class="close material-symbols-outlined">close</span>
                         <div>
                             <p class="login-text register-text"><span class="material-symbols-outlined">account_box</span>Register</p>
                         </div>
