--- a/main-page/main-page.html
+++ b/main-page/main-page.html
@@ -24,51 +24,48 @@
     <video autoplay muted loop class="background-video">
         <source src="https://cdn.pixabay.com/video/2024/02/25/201947-916877801_tiny.mp4">
     </video>
-    <div class="navigation-bar">
         <div class="right-column">
             <a href="#" class="navigation">
-                <span class="material-symbols-outlined">notes</span>
                 <div class="nav-description">Notes</div>
+                <span class="material-symbols-outlined">notes</span>                
             </a>
-            <a href="#" class="navigation" >
+            <a href="/todo" class="navigation" >
+            <div class="nav-description">To Do List</div>
             <span class="material-symbols-outlined">
                 checklist
             </span>
-            <div class="nav-description">To Do List</div>
             </a>
             <a href="#" class="navigation" >
+                <div class="nav-description">Cal</div>
                 <span class="material-symbols-outlined">
                     today
                 </span>
-            <div class="nav-description">Cal</div>
             </a>
             <a href="#" class="navigation">
+                <div class="nav-description">Timetable</div>
                 <span class="material-symbols-outlined">
                     schedule
                 </span>
-                <div class="nav-description">Timetable</div>
             </a>
-            <a href="#" class="navigation">
+            <a href="/about1.html" class="navigation">
+                <div class="nav-description">About Us</div>
                 <span class="material-symbols-outlined">
                     emoji_people
                 </span>
-            <div class="nav-description">About Us</div>
             </a>
-            <a href="#" class="navigation">
+            <a href="/login/login.html" class="navigation">
+                <div class="nav-description">Log Out</div>
                 <span class="material-symbols-outlined">
                     logout
                  </span>
-            <div class="nav-description">Log Out</div>
             </a>
             <a href="#" class="navigation">
+                <div class="nav-description">Light</div>
                 <span class="material-symbols-outlined">
                     sunny
                 </span>
-            <div class="nav-description">Light</div>
             </a>
-        </div>
-    </div>
-    
+        </div>    
     <div class="main-content-area">
         <div class="wrapper">
 
