added responsive design for login page

--- a/login/login.html
+++ b/login/login.html
@@ -19,6 +19,7 @@
             </div>
             <div class="right-container">
                 <div>
+                <div>
                     <p class="logo-text">StudyZone</p>
                 </div>
                 <div>
