Create a calendar folder

--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -9,7 +9,7 @@
     
     <div class="calendar-header">
         <div class="header-left">
-            <button><img src="images/user.png" alt="account"></button>
+            <button><img src="../images/user.png" alt="account"></button>
             <label for="chck1" class="reminder-panel-input">🔔</label>
         </div>
  
