--- a/main-page/main-page.html
+++ b/main-page/main-page.html
@@ -13,10 +13,11 @@
     <!-- CSS -->
     <link href="spaces-side-panel-styles.css" rel="stylesheet">
     <link href="music-side-panel-styles.css" rel="stylesheet">
+    <link href="pomodoro-timer-styles.css" rel="stylesheet">
     <!-- JavaScripts -->
     <script src="music-sidebar.js" defer></script>
     <script src="spaces-sidebar.js" defer></script>
-    <script src="toggle-menu.js" defer></script>
+    <script src="pomodoro-timer.js" defer></script>
     <!-- Icons from Google -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
@@ -76,7 +77,7 @@
                     <span class="material-symbols-outlined">volume_up</span>
                     <div class="nav-description">Sounds</div>
                 </button>
-                <button class="side-button" id="">
+                <button class="side-button" id="Timer">
                     <span class="material-symbols-outlined">timer</span>
                     <div class="nav-description">Timer</div>
                 </button>
@@ -265,8 +266,18 @@
             <button class="side-panel-toggle" id="MusicToggleButton" type="button">
                 <span class="material-icons sp-icon-open">arrow_back_ios</span>
             </button>
-
-
+            <!-- Pomodoro Timer -->
+            <div class="pomodoro-timer-section">
+                <div class="pomodoro-timer-container">
+                    <div class="title" id="pomodoro-title">Pomodoro Timer</div>
+                    <div class="timer" id="timer">25:00</div>
+                    <div class="controls" id="timer-controls">
+                        <button id="start">Start</button>
+                        <button id="stop">Stop</button>
+                        <button id="reset">Reset</button>
+                    </div>
+                </div>
+            </div>
             </div>
         </div>
     
