--- a/main-page/main-page.html
+++ b/main-page/main-page.html
@@ -28,29 +28,23 @@
     </video>
     <div class="navigation-bar">
         <div class="right-column">
-            <a href="#" class="navigation">
+            <a href="todo/index.html" class="navigation">
                 <span class="material-symbols-outlined">notes</span>
                 <div class="nav-description">Notes</div>
             </a>
-            <a href="#" class="navigation" >
+            <a href="/calendar/calendar.html" class="navigation" >
                 <span class="material-symbols-outlined">
                     today
                 </span>
             <div class="nav-description">Cal</div>
             </a>
-            <a href="#" class="navigation">
-                <span class="material-symbols-outlined">
-                    schedule
-                </span>
-                <div class="nav-description">Timetable</div>
-            </a>
-            <a href="#" class="navigation">
+            <a href="/about1.html" class="navigation">
                 <span class="material-symbols-outlined">
                     emoji_people
                 </span>
             <div class="nav-description">About Us</div>
             </a>
-            <a href="#" class="navigation">
+            <a href="/login/login.html" class="navigation">
                 <span class="material-symbols-outlined">
                     logout
                  </span>
