--- a/about1.html
+++ b/about1.html
@@ -8,18 +8,22 @@
         <link rel="icon" type="image/png" href="images/home.png">
         <title>About</title>
         <link rel="stylesheet" href="style_about.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
     </head>
     <body>
         <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="arrow up"></i></button>
         <div class="nav">
-                    <a href="#" style="padding: 10px 20px;"><img src="images/john_doe.jpg"></a>
-                    <a href="#" class="name" style="padding: 20px 0">John Doe</a>
+                <div class="left">
+                    <a href="#"><img src="images/john_doe.jpg"></a>
+                    <a href="#" class="name">Admin</a>
+                </div>
                 <div class="right" id="myNav1">
-                    <a href="#">Calendar</a>
-                    <a href="#">Timetable</a>
-                    <a href="#">About Us</a>
-                    <a href="#">Logout</a>
-                    <a id="darkModeToggle" href="#"><img id="themeIcon" src="images/bright.png"></a>
+                    <a href="#"><span class="material-symbols-outlined">notes</span>Notes</a>
+                    <a href="#"><span class="material-symbols-outlined">today</span>Calendar</a>
+                    <a href="#" class="active"><span class="material-symbols-outlined">emoji_people</span>About Us</a>
+                    <a href="#"><span class="material-symbols-outlined">logout</span>Log Out</a>
+                    <a id="darkModeToggle" href="#"><span class="material-symbols-outlined">sunny</span>Light</a>
                 </div>
         </div>
             <div id="container">
