--- a/about.html
+++ b/about.html
@@ -25,6 +25,11 @@
     <a href="#">Logout</a>
     <a onclick="image()" href="#"><img id="themeIcon" src="images/bright.png"></a>
   </div>
+  <div class="smallright">
+    <a href="javascript:void(0);" class="hamburger-icon" onclick="openMobileMenu()">
+        <span class="material-symbols-outlined">menu</span>
+    </a>
+  </div>
 </div>
 
 
