--- a/about1.html
+++ b/about1.html
@@ -25,6 +25,11 @@
                     <a href="#"><span class="material-symbols-outlined">logout</span>Log Out</a>
                     <a id="darkModeToggle" href="#"><span class="material-symbols-outlined">sunny</span>Light</a>
                 </div>
+                <div class="smallright">
+                    <a href="javascript:void(0);" class="hamburger-icon" onclick="openMobileMenu()">
+                        <span class="material-symbols-outlined">menu</span>
+                    </a>
+                </div>
         </div>
             <div id="container">
                 <div id="left_side">
