added dark mode/light mode for login

--- a/login/login.html
+++ b/login/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-theme="dark">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
@@ -65,6 +65,11 @@
                         <button id="login-button" type="submit" class="login-button margin-top">Register</button><br>
             </form>
         </div>
+            <nav class="right-nav">
+                    <ul class="right-ul">
+                            <li><a id="theme-toggle" class="right-ul-li" href="javascript:change_theme()"><span class="material-symbols-outlined">light_mode</span>Theme</a></li>
+                    </ul>
+            </nav>
     </body>
 </html>
 
