--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -4,7 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Calendar Page</title>
     <link rel="stylesheet" href="calendar.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     
@@ -24,16 +23,23 @@
         <div class="menu">
             <a href="../main-page/main-page.html" class="item">
                 <div class="licon">
-                    <span class="material-symbols-outlined">home</span>
+                    <img src ="../images/home.png">
                 </div>
                 <div class="con">Dashboard</div> 
             </a>
 
             <a href="../login/login.html" class="item">
                 <div class="licon">
-                    <span class="material-symbols-outlined">account_circle</span>
+                    <img src ="../images/account.png">
                 </div>
                 <div class="con">Profile</div>
+            </a>
+
+            <a href="../about1.html" class="item">
+                <div class="licon">
+                    <img src ="../images/aboutus.png">
+                </div>
+                <div class="con">About Us</div>
             </a>
 
         </div>
@@ -43,7 +49,7 @@
         <div class="calendar-header">
             <div class="header-left">
                 <label for="chck1" class="reminder-panel-input">
-                    <span class="material-symbols-outlined">schedule</span>
+                    <img src ="../images/schedule.png">
                 </label>
             </div>
     
