fixed mobile version bug todolist

--- a/todo/index.html
+++ b/todo/index.html
@@ -17,7 +17,7 @@
 		<nav id="left-nav" class="left-nav">
 			<p class="tasks-text">MENU</p>
 			<ul id="left-navbar" class="left-navbar">
-				<a list="35fd7e4c-5e49-4b36-8d81-f9da7b66bc82" href="javascript:update_current_list('35fd7e4c-5e49-4b36-8d81-f9da7b66bc82')" class="list-item" >
+				<a list="35fd7e4c-5e49-4b36-8d81-f9da7b66bc82" onclick="update_current_list('35fd7e4c-5e49-4b36-8d81-f9da7b66bc82')" class="list-item" >
 					<li id="35fd7e4c-5e49-4b36-8d81-f9da7b66bc82_nav_title">LIST</li>
 					<p id="35fd7e4c-5e49-4b36-8d81-f9da7b66bc82_num" class="tasks-num">0</p>
 					<span id="first-x" class="material-symbols-outlined setting">close_small</span>
