--- a/todo/index.html
+++ b/todo/index.html
@@ -55,7 +55,7 @@
 				<nav class="right-nav">
 					<ul class="right-ul">
 						<li><a class="right-ul-li" href="/Web1201/main-page/main-page.html"><span class="material-symbols-outlined">home</span>Home</a></li>
-						<li><a class="right-ul-li"href="#"><span class="material-symbols-outlined">today</span>Calendar</a></li>
+						<li><a class="right-ul-li" href="/Web1201/calendar/calendar.html"><span class="material-symbols-outlined">today</span>Calendar</a></li>
 						<li><a class="right-ul-li" href="/Web1201/about.html"><span class="material-symbols-outlined">emoji_people</span>About Us</a></li>
 						<li><a id="theme-toggle" class="right-ul-li" href="javascript:change_theme()"><span class="material-symbols-outlined">light_mode</span>Theme</a></li>
 					</ul>
