cleaned up the files

--- a/login/login.html
+++ b/login/login.html
@@ -14,7 +14,7 @@
     <body>
         <div class="main-container">
             <div class="left-container">
-                    <img src="../assets/left.jpg">
+                    <img src="../images/left.jpg">
                 </ul>
             </div>
             <div class="right-container">
