--- a/todo/todo.html
+++ b/todo/todo.html
@@ -2,8 +2,8 @@
 <html data-theme="dark">
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="./index.css"/>
-		<script src="./index.js" defer></script>
+		<link rel="stylesheet" href="./todo.css"/>
+		<script src="./todo.js" defer></script>
 		<style>
 		@import url('https://fonts.googleapis.com/css2?family=Caveat&family=Inter&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
 		</style>
