removed theme from main-page

--- a/login/login.html
+++ b/login/login.html
@@ -33,7 +33,7 @@
                             <label class="vague"  for="password">Password</label>
                             <input minlength=8 autocomplete="off" type="password" id="password" name="password" required><span class="eye material-symbols-outlined">visibility</span></input>
                             <p id="error" class="error">incorrect username or password.</p>
-                            <a href="#" class="link forgot">Forgot password?</a>
+                            <a href="#" onclick="alert('CREDENTIALS ARE \nadmin:password')" class="link forgot">Forgot password?</a>
                         </div>
                         <button id="login-button" type="submit" class="login-button">Sign In</button><br>
                     </form>
