--- a/main-page/main-page.html
+++ b/main-page/main-page.html
@@ -53,12 +53,12 @@
                  </span>
             <div class="nav-description">Log Out</div>
             </a>
-            <a href="#" class="navigation">
-                <span class="material-symbols-outlined">
-                    sunny
-                </span>
-            <div class="nav-description">Light</div>
-            </a>
+            <!-- <a href="#" class="navigation"> -->
+            <!--     <span class="material-symbols-outlined"> -->
+            <!--         sunny -->
+            <!--     </span> -->
+            <!-- <div class="nav-description">Light</div> -->
+            <!-- </a> -->
         </div>
     </div>
     
