Added and changed some images

--- a/about1.html
+++ b/about1.html
@@ -8,29 +8,29 @@
         <link rel="icon" type="image/png" href="images/home.png">
         <title>About</title>
         <link rel="stylesheet" href="style_about.css">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
     </head>
     <body>
         <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="arrow up"></i></button>
         <div id="fixedbutton">
-            <button><span class="material-symbols-outlined">keyboard_arrow_left</span></button>
-            <button id="contact"><span class="material-symbols-outlined">notes</span>Notes</button>
+            <a href="#"><img src="images/contact.png">Contact Us</a>
+        </div>
+        <div id="form">
+            
         </div>
         <div class="nav">
                 <div class="left">
                     <a href="#"><img src="images/john_doe.jpg">Admin</a>
                 </div>
                 <div class="right" id="myNav1">
-                    <a href="#"><span class="material-symbols-outlined">notes</span>Notes</a>
-                    <a href="#"><span class="material-symbols-outlined">today</span>Calendar</a>
-                    <a href="#" class="active"><span class="material-symbols-outlined">emoji_people</span>About Us</a>
-                    <a href="#"><span class="material-symbols-outlined">logout</span>Log Out</a>
-                    <a id="darkModeToggle" href="#"><span class="material-symbols-outlined">sunny</span>Light</a>
+                    <a href="#"><img src="images/notes.png" alt="notes">Notes</a>
+                    <a href="#"><img src="images/calendar.png" alt="calendar">Calendar</a>
+                    <a href="#" class="active"><img src="images/aboutus.png" alt="aboutus">About Us</a>
+                    <a href="#"><img src="images/logout.png" alt="logout">Log Out</a>
+                    <a id="darkModeToggle" href="#"><img src="images/light.png" alt="sunny">Light</a>
                 </div>
                 <div class="smallright">
                     <a href="javascript:void(0);" class="hamburger-icon" onclick="openMobileMenu()">
-                        <span class="material-symbols-outlined">menu</span>Menu
+                        <img id="mobileMenuIcon" src="images/menu.png" alt="menu">Menu
                     </a>
                 </div>
         </div>
