--- a/login/login.html
+++ b/login/login.html
@@ -50,7 +50,7 @@
                         <div class="input-div register_input_div">
                             <label class="vague" for="username">*Username</label>
                             <input autocomplete="off" type="text" id="register_username" name="username" minlength=5 maxlength=15 required></input>
-                            <p id="username_error" class="register_error"><span class="material-symbols-outlined">close</span>username may only contain letters, numbers, and the characters _, ., and -</p>
+                            <p id="username_error" class="register_error"><span class="material-symbols-outlined">close</span>username may only contain letters, numbers, and the characters _ . @ (space) and -</p>
                         </div>
                         <div class="input-div register_input_div">
                             <label class="vague"  for="password">*Password</label>
