--- a/about1.html
+++ b/about1.html
@@ -11,11 +11,22 @@
     </head>
     <body>
         <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="arrow up"></i></button>
-        <div id="fixedbutton">
-            <a href="#"><img src="images/contact.png">Contact Us</a>
+        <div id="fixedbutton" onclick="openContact()">
+            <a href="#"><img id="menuicon" src="images/contact.png" alt="contact">Contact Us</a>
         </div>
-        <div id="form">
-            
+        <div id="contactform">
+            <form>
+                <label for="name">Name</label>
+                <input type="name" id="name" name="name" placeholder="Insert your name">
+
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" placeholder="Insert your email address">
+
+                <label for="details">Details</label>
+                <textarea id="details" name="details" placeholder="Write something.." style="height:200px"></textarea>
+
+                <input type="submit" value="Submit">
+            </form>
         </div>
         <div class="nav">
                 <div class="left">
