--- a/about1.html
+++ b/about1.html
@@ -33,10 +33,10 @@
                     <a href="#"><img src="images/john_doe.jpg">Admin</a>
                 </div>
                 <div class="right" id="myNav1">
-                    <a href="#"><img src="images/notes.png" alt="notes">Notes</a>
-                    <a href="#"><img src="images/calendar.png" alt="calendar">Calendar</a>
+                    <a href="todo.html"><img src="images/notes.png" alt="notes">Notes</a>
+                    <a href="calendar/calendar.html"><img src="images/calendar.png" alt="calendar">Calendar</a>
                     <a href="#" class="active"><img src="images/aboutus.png" alt="aboutus">About Us</a>
-                    <a href="#"><img src="images/logout.png" alt="logout">Log Out</a>
+                    <a href="login/login.html"><img src="images/logout.png" alt="logout">Log Out</a>
                     <a id="darkModeToggle" href="#"><img src="images/light.png" alt="sunny">Light</a>
                 </div>
                 <div class="smallright">
