Updates on icons

--- a/about1.html
+++ b/about1.html
@@ -39,6 +39,11 @@
                     <a href="login/login.html"><img src="images/logout.png" alt="logout">Log Out</a>
                     <a id="darkModeToggle" href="#"><img src="images/light.png" alt="sunny">Light</a>
                 </div>
+                <div class="smallclose">
+                    <a href="javascript:void(0)" class="close-icon" onclick="closemenu()">
+                        <img id="close" src="images/close.png">
+                    </a>
+                </div>
                 <div class="smallright">
                     <a href="javascript:void(0);" class="hamburger-icon" onclick="openMobileMenu()">
                         <img id="mobileMenuIcon" src="images/menu.png" alt="menu">Menu
