Added responsive functionality

--- a/about1.html
+++ b/about1.html
@@ -1,11 +1,8 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- Light mode favicon -->
-        <link rel="icon" href="images/home_light.png" type="image/x-icon" media="(prefers-color-scheme: light)">
-        <!-- Dark mode favicon -->
-        <link rel="icon" href="images/home_dark.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
-        <link rel="icon" type="image/png" href="images/home.png">
+        <link rel="icon" id="title" href="images/home.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
+        <link rel="icon" id="title" href="images/home_light.png" type="image/x-icon"  media="(prefers-color-scheme: light)">
         <title>About</title>
         <link rel="stylesheet" href="style_about.css">
     </head>
@@ -46,7 +43,7 @@
                 </div>
                 <div class="smallright">
                     <a href="javascript:void(0);" class="hamburger-icon" onclick="openMobileMenu()">
-                        <img id="mobileMenuIcon" src="images/menu.png" alt="menu">Menu
+                        <img id="mobileMenuIcon" src="images/menu.png" alt="Menu">Menu
                     </a>
                 </div>
         </div>
