--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -82,6 +82,7 @@
         <div class="calendar-page">
             <input type="checkbox" id="chck1">
             <div class="reminder-panel">
+                <label for="chck1" class="close-reminder">&times;</label>
                 <h3>Reminder</h3> <div class="reminder-line"></div>
                 <div class="reminder-list"></div>
             </div>
